# practice

./: bs4_script.py  pyproject.toml  selenium_script.py  test_scrapers.py
.github/workflows/: ci.yml
