[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "logging>=0.4.9.6",
    "lxml>=6.1.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "requests-mock>=1.12.1",
    "selenium>=4.43.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.33.0.20260508",
]
